Use removeFirst